kubernetes/app-a-app-b.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-a
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    org: application-a
    class: app-a
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-a
spec:
  replicas: 2
  selector:
    matchLabels:
      org: application-a
      class: app-a
  template:
    metadata:
      labels:
        org: application-a
        class: app-a
    spec:
      containers:
      - name: app-a
        image: larse514/my-service-a
---
apiVersion: v1
kind: Pod
metadata:
  name: microservice-a
  labels:
    org: application-a
    class: microservice-a
spec:
  containers:
  - name: micro-a
    image: larse514/myclient
---
apiVersion: v1
kind: Pod
metadata:
  name: microservice-b
  labels:
    org: application-b
    class: microservice-b
spec:
  containers:
  - name: micro-b
    image: larse514/myclient
