kubernetes/l4-network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "L3-L4 policy to restrict application a access to only containers in application a network"
metadata:
  name: "basicnetworkpolicy"
spec:
  endpointSelector:
    matchLabels:
      org: application-a
      class: service-a
  ingress:
  - fromEndpoints:
    - matchLabels:
        org: application-a
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
